--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="textbox">
                             <h2>Aditya Engineering College</h2>
                             <small>2023-2025</small>
-                            <p>Currently pursuing MCA.</p>
+                            <p>Completed my MCA.</p>
                             <span class="right-arrow"></span>
                         </div>
                     </div>
