--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                 </div>
                 
                 <div class="project">
-                    <img src="images/cal.png" alt="Project 3" class="project-image">
+                    <img src="React Appimage.html" alt="Project 3" class="project-image">
                     <div class="project-details">
-                        <h3>calculator</h3>
+                        <h3>To-do-List</h3>
                         <p>Developed a functional calculator application using HTML, CSS, and JavaScript, providing users with a versatile tool for basic arithmetic operations. Key highlights include
                             <ul>
                                 <li>Intuitive Interface: Designed a user-friendly interface with clear buttons and display, ensuring ease of use for performing calculations.</li>
