--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <li>Comprehensive Showcase: Presented skills, projects, and accomplishments in a structured manner, with clear navigation and detailed descriptions, allowing visitors to explore and understand expertise and contributions effectively.</li>
                             </ul>
                         </p>
-                        <a href="https://thrinadh215.github.io/calculator_webapk/" target="_self">View Project</a>
+                        <a href="https://sudheer4567.github.io/My_Portfolio/" target="_self">View Project</a>
                     </div>
                 </div>
                 
