--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </div>
                 
                 <div class="project">
-                    <img src="React Appimage.html" alt="Project 3" class="project-image">
+                    <img src="reactappimage.png" alt="Project 3" class="project-image">
                     <div class="project-details">
                         <h3>To-do-List</h3>
                         <p>Developed a functional calculator application using HTML, CSS, and JavaScript, providing users with a versatile tool for basic arithmetic operations. Key highlights include
