--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <li>Intuitive Interface: Designed a user-friendly interface with clear buttons and display, ensuring ease of use for performing calculations.</li>
                             </ul>
                         </p>
-                        <a href="https://sudheer4567.github.io/My_Portfolio/" target="_self">View Project</a>
+                        <a href="images/reactappimage.png" target="_self">View Project</a>
                     </div>
                 </div>
                 
