--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                     <img src="images/reactappimage.png" alt="Project 3" class="project-image">
                     <div class="project-details">
                         <h3>To-do-List</h3>
-                        <p>Developed a functional calculator application using HTML, CSS, and JavaScript, providing users with a versatile tool for basic arithmetic operations. Key highlights include
+                        <p>Developed a responsive To-Do List application using React.js to help users manage daily tasks effectively.
                             <ul>
-                                <li>Intuitive Interface: Designed a user-friendly interface with clear buttons and display, ensuring ease of use for performing calculations.</li>
+                                <li>Implemented features such as adding, deleting, and marking tasks as completed, with real-time UI updates.</li>
                             </ul>
                         </p>
                         <a href="images/reactappimage.png" target="_self">View Project</a>
