--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
                         <p>Developed a responsive To-Do List application using React.js to help users manage daily tasks effectively.
                             <ul>
                                 <li>Implemented features such as adding, deleting, and marking tasks as completed, with real-time UI updates.</li>
+                                <li>Ensured a clean and intuitive user interface, allowing smooth task input and management across devices.</li>
+                                <li></li>
                             </ul>
                         </p>
                         <a href="images/reactappimage.png" target="_self">View Project</a>
