--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <ul>
                                 <li>Implemented features such as adding, deleting, and marking tasks as completed, with real-time UI updates.</li>
                                 <li>Ensured a clean and intuitive user interface, allowing smooth task input and management across devices.</li>
-                                <li></li>
+                                <li>Utilized React hooks like useState for state management and modular components for code reusability.</li>
                             </ul>
                         </p>
                         <a href="images/reactappimage.png" target="_self">View Project</a>
