--- a/index.html
+++ b/index.html
@@ -207,6 +207,22 @@
                         <a href="images/reactappimage.png" target="_self">View Project</a>
                     </div>
                 </div>
+
+                <div class="project">
+                    <img src="images/reactappimage.png" alt="Project 3" class="project-image">
+                    <div class="project-details">
+                        <h3>Food Calorie Estimation System</h3>
+                        <p>Tools: TensorFlow, Flask, Python, HTML/CSS, JavaScript</p>
+                        <p>Developed a Flask web app that allows users to upload food images and receive real-time nutrition data.
+                            <ul>
+                                <li>Used Inception-V3 CNN model to classify food images with 85% accuracy.</li>
+                                <li>Retrieved detailed nutrition values (proteins, fats, vitamins) from a local dataset based on the identified food type.</li>
+                                <li>Demonstrated practical use of machine learning and backend development for real-world applications.</li>
+                            </ul>
+                        </p>
+                        <a href="" target="_self">View Project</a>
+                    </div>
+                </div>
                 
             </div>
         </section>
