--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
 
                 <div class="project">
-                    <img src="images/reactappimage.png" alt="Project 3" class="project-image">
+                    <img src="images/Head.png" alt="Project 3" class="project-image">
                     <div class="project-details">
                         <h3>Food Calorie Estimation System</h3>
                         <p>Tools: TensorFlow, Flask, Python, HTML/CSS, JavaScript</p>
