--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                 <li>Demonstrated practical use of machine learning and backend development for real-world applications.</li>
                             </ul>
                         </p>
-                        <a href="" target="_self">View Project</a>
+                        <a href="images/Head.jpg" target="_self">View Project</a>
                     </div>
                 </div>
                 
