--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <h3>contact details</h3>
                     <ul>
                         <li><i class="fa-solid fa-envelope"></i>email : sudheerayinavilli123@gmail.com</li>
-                        <li><i class="fa-solid fa-phone"></i>phone no : 630*******</li>
+                        <li><i class="fa-solid fa-phone"></i>phone no : 6305789885</li>
                         <li><i class="fa-brands fa-github"></i>github : <a href="https://github.com/Sudheer4567"></i>github-Sudheer4567</a></li>
                         <li><i class="fa-brands fa-linkedin"></i>linkedin : <a href="https://www.linkedin.com/in/sudheer-ayinavilli/">linkedin-sudheerayinavilli</a></li>
                     </ul>
@@ -273,7 +273,7 @@
                 <h3>contact me</h3>
                 <ul>
                     <li>email : sudheerayinavilli123@gmail.com</li>
-                    <li>phone : 630*******</li>
+                    <li>phone : 6305789885</li>
                     <li>address: myaddress</li>
                 </ul>
             </div>
