--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </section>
         <section class="fourthsection" id="projects">
             <div class="projects-section">
-                <h2>My Project</h2>
+                <h2>My Projects</h2>
                 <div class="project">
                     <img src="images/portfolioimg.png" alt="Project 1" class="project-image">
                     <div class="project-details">
